@@ -2,6 +2,8 @@ version 0.77.03
 	--select_af_point
 	Store extended iso range for camera models
 	commandline: Delay only after bracketing groups if auto bracketing is set.
+	--jpeg_image_tone ( buggy )
+	Handling camera specific jpeg image tone table.
 
 version 0.77.02 ( 2011-09-03 )
 	html version of man page
